hphp/hack/test/typecheck/shape_idx_unresolved.php.like_types.exp
File "shape_idx_unresolved.php", line 9, characters 22-35:
Invalid argument (Typing[4110])
File "shape_idx_unresolved.php", line 9, characters 22-35:
Expected shape(?'x' => [unresolved], ...) because Shapes::idx expects a shape
File "shape_idx_unresolved.php", line 4, characters 16-33:
But got dynamic because it is an unenforceable type
